--- a/static/index.html
+++ b/static/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -10,26 +9,29 @@
   <script src="https://unpkg.com/htmx.org@1.9.6"></script>
   <script src="https://unpkg.com/htmx.org/dist/ext/client-side-templates.js"></script>
   <script src="https://unpkg.com/mustache@latest"></script>
-  <script src="/dist/nostr-sub.js"></script>
-  <script>
-    htmx.on('htmx:nostr-sub-event', console.log)
-  </script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/0.145.0/three.min.js"></script>
 </head>
 
 <body>
-  <form hx-trigger="submit" hx-ext="nostr-sub, client-side-templates" mustache-template="event"
-    nostr-filter='{"kinds":[0]}'>
-    <input name="author" placeholder="author pubkey" />
-    <button>nostr test</button>
-  </form>
+  <main id="main">
+    <div id="changelog" 
+         hx-get="/changelog.json" 
+         hx-trigger="load"
+         hx-ext="client-side-templates"
+         mustache-template="changelog-template">
+    </div>
+  </main>
 
-  <main id="main"></main>
-
-  <template id="event">
-    <div id="main" hx-swap-oob="afterbegin">
-      at <em>{{created_at}}</em> <b>{{pubkey}}</b> said:
-      <p>{{content}}</p>
+  <template id="changelog-template">
+    <div class="changelog">
+      {{#changes}}
+      <div class="changelog-entry">
+        <div class="changelog-date">{{date}}</div>
+        <div class="changelog-title">{{title}}</div>
+        <div class="changelog-description">{{description}}</div>
+      </div>
+      {{/changes}}
     </div>
   </template>
 </body>
+</html>
