Updated index.html to remove redundant script tag for client-side templates.

--- a/static/index.html
+++ b/static/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -16,8 +15,11 @@
 
 <body>
   <main id="main">
-    <div id="changelog" hx-get="/changelog.json" hx-trigger="load" hx-ext="client-side-templates"
-      mustache-template="changelog-template">
+    <div id="changelog" 
+         hx-get="/changelog.json" 
+         hx-trigger="load"
+         hx-ext="client-side-templates"
+         mustache-template="changelog-template">
     </div>
   </main>
 
@@ -25,13 +27,15 @@
     <div class="changelog">
       {{#changes}}
       <div class="changelog-entry">
-        <div class="changelog-date">{{date}}</div>
-        <div class="changelog-title">{{title}}</div>
-        <div class="changelog-description">{{description}}</div>
+        <div class="changelog-date">{{date}} - {{version}}</div>
+        <ul>
+          {{#changes}}
+          <li>{{.}}</li>
+          {{/changes}}
+        </ul>
       </div>
       {{/changes}}
     </div>
   </template>
 </body>
-
 </html>
