--- a/static/index.html
+++ b/static/index.html
@@ -26,6 +26,10 @@
 
   <template id="changelog-template">
     <div class="changelog">
+      <div style="text-align: center;">
+        <img src="onyx.png" />
+      </div>
+
       {{#changes}}
       <div class="changelog-entry">
         <div class="changelog-date">{{version}} - {{date}}</div>
