--- a/static/index.html
+++ b/static/index.html
@@ -26,7 +26,7 @@
 
   <template id="changelog-template">
     <div class="changelog">
-      <div style="text-align: center;">
+      <div style="text-align: center; margin-bottom: 10px;">
         <img src="onyx.png" />
       </div>
 
