--- a/static/index.html
+++ b/static/index.html
@@ -77,6 +77,7 @@
       <div class="video-entry {{^tweetId}}coming-soon{{/tweetId}}">
         <div class="video-title">{{title}}</div>
         <div class="video-date">{{date}}</div>
+        <div class="video-text">{{text}}</div>
         {{#tweetId}}
         <blockquote class="twitter-tweet" data-conversation="none" data-media-max-width="560" data-theme="dark">
           <p lang="en" dir="ltr">Loading tweet...</p>
