Back to JBM font

--- a/static/index.html
+++ b/static/index.html
@@ -10,7 +10,7 @@
   <title>OpenAgents</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Commissioner:wght@100..900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400&display=swap" rel="stylesheet">
   <script src="https://unpkg.com/htmx.org@1.9.6"></script>
   <script src="https://unpkg.com/htmx.org/dist/ext/client-side-templates.js"></script>
   <script src="https://unpkg.com/mustache@latest"></script>
@@ -36,10 +36,10 @@
       </div>
 
       <div class="intro-card">
-        <p style="text-align: center; margin-top: 0; font-size: 1.4em;"><strong>Meet Onyx, your new personal AI
+        <p style="text-align: center; margin-top: 0; font-size: 1.2em;"><strong>Meet Onyx, your new personal AI
             agent.</strong></p>
 
-        <p style="text-align: center; font-size: 1.4em; margin: 15px 0;">Beta v0.1.0</p>
+        <p style="text-align: center; font-size: 1.2em; margin: 15px 0;">Beta v0.1.0</p>
 
         <div class="download-links">
           <p>Android: <a href="https://github.com/OpenAgentsInc/onyx/releases/download/v0.1.6/Onyx_v0.1.0.apk"
@@ -72,7 +72,7 @@
 
   <template id="videos-template">
     <div class="videos">
-      <div class="videos-title">OpenAgents Video Series</div>
+      <div class="videos-title">Recent Videos</div>
       {{#videos}}
       <div class="video-entry {{^tweetId}}coming-soon{{/tweetId}}">
         <div class="video-title">{{title}}</div>
