--- a/static/index.html
+++ b/static/index.html
@@ -20,6 +20,9 @@
 
 <body>
   <canvas id="bg"></canvas>
+  <div id="logo-container">
+    <img src="onyx.png" alt="Onyx" id="onyx-logo" />
+  </div>
   <main id="main">
     <div id="changelog" hx-get="/changelog.json" hx-trigger="load" hx-ext="client-side-templates"
       mustache-template="changelog-template">
@@ -31,10 +34,6 @@
 
   <template id="changelog-template">
     <div class="changelog">
-      <div style="text-align: center; margin-bottom: 10px;">
-        <img src="onyx.png" />
-      </div>
-
       <div class="intro-card">
         <p style="text-align: center; margin-top: 0; font-size: 1.2em;"><strong>Meet Onyx, your new personal AI
             agent.</strong></p>
