--- a/static/index.html
+++ b/static/index.html
@@ -11,15 +11,18 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400&display=swap" rel="stylesheet">
-  <script src="https://unpkg.com/htmx.org@1.9.6"></script>
-  <script src="https://unpkg.com/htmx.org/dist/ext/client-side-templates.js"></script>
-  <script src="https://unpkg.com/mustache@latest"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/0.145.0/three.min.js"></script>
+  <script src="js/htmx.min.js"></script>
+  <script src="js/client-side-templates.js"></script>
+  <script src="js/mustache.js"></script>
+  <script src="js/three.min.js"></script>
   <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </head>
 
 <body>
   <canvas id="bg"></canvas>
+  <div id="logo-container">
+    <img src="onyx.png" alt="Onyx" id="onyx-logo" />
+  </div>
   <main id="main">
     <div id="changelog" hx-get="/changelog.json" hx-trigger="load" hx-ext="client-side-templates"
       mustache-template="changelog-template">
@@ -31,10 +34,6 @@
 
   <template id="changelog-template">
     <div class="changelog">
-      <div style="text-align: center; margin-bottom: 10px;">
-        <img src="onyx.png" />
-      </div>
-
       <div class="intro-card">
         <p style="text-align: center; margin-top: 0; font-size: 1.2em;"><strong>Meet Onyx, your new personal AI
             agent.</strong></p>
