and vendor on nostr page, dont defer

--- a/static/nostr.html
+++ b/static/nostr.html
@@ -7,9 +7,9 @@
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400&display=swap" rel="stylesheet">
   <title>OpenAgents</title>
-  <script src="https://unpkg.com/htmx.org@1.9.6" defer></script>
-  <script src="https://unpkg.com/htmx.org/dist/ext/client-side-templates.js" defer></script>
-  <script src="https://unpkg.com/mustache@latest" defer></script>
+  <script src="js/htmx.min.js"></script>
+  <script src="js/client-side-templates.js"></script>
+  <script src="js/mustache.js"></script>
   <script src="/dist/nostr-sub.js"></script>
   <script>
     htmx.on('htmx:nostr-sub-event', console.log)
