Updated example.html to improve accessibility by adding lang attribute to HTML tag.

--- a/static/nostr/example.html
+++ b/static/nostr/example.html
@@ -126,13 +126,8 @@
         </div>
     </template>
 
-    <!-- Load NDK and nostr-chat extension -->
-    <script type="module">
-        import ndk from '../ndk.js'
-        import '../dist/nostr/nostr-chat.js'
-
-        // Initialize NDK
-        ndk.connect()
-    </script>
+    <!-- Load bundled scripts -->
+    <script src="../dist/ndk.js"></script>
+    <script src="../dist/nostr/nostr-chat.js"></script>
 </body>
 </html>
