--- a/static/new.html
+++ b/static/new.html
@@ -2,12 +2,26 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>New Page</title>
-    <link rel="stylesheet" href="style.css">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="HandheldFriendly" content="True"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes"/>
+    <meta name="application-name" content="OpenAgents"/>
+    <meta name="description" content="We build intelligent machines."/>
+    <meta name="author" content="OpenAgents, Inc.">
+    <meta name="format-detection" content="telephone=no">
+    <link rel="canonical" href="https://openagents.com"/>
+    <style>
+        body {
+            background-color: black;
+            color: white
+        }
+   </style>
 </head>
+
 <body>
-    <h1>New Page</h1>
-    <p>Welcome to the new page!</p>
+        OpenAgents
 </body>
 </html>
+
+
+
