Updated new.html to close meta tags for better HTML compliance.

--- a/static/new.html
+++ b/static/new.html
@@ -10,18 +10,10 @@
     <meta name="author" content="OpenAgents, Inc.">
     <meta name="format-detection" content="telephone=no">
     <link rel="canonical" href="https://openagents.com"/>
-    <style>
-        body {
-            background-color: black;
-            color: white
-        }
-   </style>
+    <link rel="stylesheet" href="new.css"/>
 </head>
 
 <body>
         OpenAgents
 </body>
 </html>
-
-
-
