--- a/static/new.html
+++ b/static/new.html
@@ -6,7 +6,7 @@
     <meta name="HandheldFriendly" content="True"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes"/>
     <meta name="application-name" content="OpenAgents"/>
-    <meta name="description" content="We build intelligent machines."/>
+    <meta name="description" content="Intelligent software to empower humans."/>
     <meta name="author" content="OpenAgents, Inc.">
     <meta name="format-detection" content="telephone=no">
     <link rel="canonical" href="https://openagents.com"/>
@@ -14,6 +14,7 @@
 </head>
 
 <body>
-        OpenAgents
+        <div style="font-size:1.5em">OpenAgents, Inc.</div>
+        <p>Intelligent software to empower humans.</p>
 </body>
 </html>
