--- a/static/new.html
+++ b/static/new.html
@@ -10,7 +10,7 @@
     <meta name="author" content="OpenAgents, Inc.">
     <meta name="format-detection" content="telephone=no">
     <link rel="canonical" href="https://openagents.com"/>
-    <link rel="stylesheet" href="new.css"/>
+    <link rel="stylesheet" href="css/new.css"/>
     <link rel="stylesheet" href="css/chat.css"/>
     <script src="js/htmx.min.js"></script>
     <script src="js/client-side-templates.js"></script>
