--- a/static/index.html
+++ b/static/index.html
@@ -24,10 +24,10 @@
     <img src="onyx.png" alt="Onyx" id="onyx-logo" />
   </div>
   <main id="main">
-    <div id="changelog" hx-get="/changelog.json" hx-trigger="load" hx-ext="client-side-templates"
+    <div id="changelog" hx-get="/data/changelog.json" hx-trigger="load" hx-ext="client-side-templates"
       mustache-template="changelog-template">
     </div>
-    <div id="videos" hx-get="/videos.json" hx-trigger="load" hx-ext="client-side-templates"
+    <div id="videos" hx-get="/data/videos.json" hx-trigger="load" hx-ext="client-side-templates"
       mustache-template="videos-template">
     </div>
   </main>
