--- a/static/agents.html
+++ b/static/agents.html
@@ -16,7 +16,92 @@
     <script src="js/client-side-templates.js"></script>
     <script src="js/mustache.js"></script>
     <script src="dist/ndk.js"></script>
-    <script src="dist/nostr/nostr-chat.js"></script>
+    <script src="dist/nostr/nostr-agent.js"></script>
+
+    <style>
+        .status-badge {
+            display: inline-block;
+            padding: 2px 8px;
+            border-radius: 12px;
+            font-size: 0.9em;
+            font-weight: 500;
+        }
+        .status-badge.running { background: #4CAF50; color: white; }
+        .status-badge.starting { background: #2196F3; color: white; }
+        .status-badge.stopping { background: #FF9800; color: white; }
+        .status-badge.stopped { background: #9E9E9E; color: white; }
+        .status-badge.error { background: #F44336; color: white; }
+        .status-badge.paused { background: #607D8B; color: white; }
+
+        .agent-metrics {
+            margin: 10px 0;
+            font-size: 0.9em;
+            color: #666;
+        }
+
+        .agent-actions {
+            margin-top: 15px;
+        }
+
+        .agent-actions button {
+            margin-right: 10px;
+        }
+
+        .agent-actions button.danger {
+            background: #F44336;
+            color: white;
+        }
+
+        .agent-item {
+            border: 1px solid #ddd;
+            padding: 15px;
+            margin-bottom: 15px;
+            border-radius: 4px;
+        }
+
+        .agent-item h3 {
+            margin: 0 0 10px 0;
+        }
+
+        .form-group {
+            margin-bottom: 15px;
+        }
+
+        .form-group label {
+            display: block;
+            margin-bottom: 5px;
+            font-weight: 500;
+        }
+
+        .form-group input,
+        .form-group textarea {
+            width: 100%;
+            padding: 8px;
+            border: 1px solid #ddd;
+            border-radius: 4px;
+        }
+
+        .form-group textarea {
+            min-height: 100px;
+            font-family: monospace;
+        }
+
+        .container {
+            display: flex;
+            gap: 30px;
+            padding: 20px;
+        }
+
+        .column {
+            flex: 1;
+        }
+
+        .header {
+            padding: 20px;
+            background: #f5f5f5;
+            border-bottom: 1px solid #ddd;
+        }
+    </style>
 </head>
 
 <body>
@@ -31,8 +116,8 @@
             <div class="agent-form">
                 <h2>Create New Agent</h2>
                 <form id="create-agent-form"
-                      hx-ext="nostr"
-                      nostr-event-kind="30001"
+                      hx-ext="nostr-agent"
+                      nostr-action="create"
                       hx-on="submit: event.preventDefault()">
                     <div class="form-group">
                         <label for="agent-name">Agent Name</label>
@@ -69,10 +154,9 @@
             <div class="agent-list">
                 <h2>Your Agents</h2>
                 <div id="agent-items"
-                     hx-ext="nostr"
+                     hx-ext="nostr-agent"
                      nostr-subscribe="true"
-                     nostr-kinds="[30001]"
-                     nostr-filter-pubkey="{{user_pubkey}}">
+                     nostr-kinds="[30001, 30004]">
                     <!-- Agent items will be inserted here -->
                 </div>
             </div>
@@ -99,5 +183,26 @@
             </div>
         </div>
     </template>
+
+    <script>
+        // Initialize NostrAgent when the page loads
+        document.addEventListener('DOMContentLoaded', () => {
+            window.nostrAgent = new NostrAgent()
+
+            // Listen for agent events
+            document.addEventListener('agent:created', (e) => {
+                console.log('Agent created:', e.detail)
+            })
+
+            document.addEventListener('instance:updated', (e) => {
+                console.log('Instance updated:', e.detail)
+            })
+
+            document.addEventListener('nostr-agent:error', (e) => {
+                console.error('Nostr agent error:', e.detail)
+                alert(e.detail.message)
+            })
+        })
+    </script>
 </body>
 </html>
