--- a/static/new.html
+++ b/static/new.html
@@ -10,7 +10,7 @@
     <meta name="author" content="OpenAgents, Inc.">
     <meta name="format-detection" content="telephone=no">
     <link rel="canonical" href="https://openagents.com"/>
-    <link rel="stylesheet" href="css/new.css"/>
+    <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="css/chat.css"/>
     <link rel="stylesheet" href="css/changelog.css"/>
     <link rel="stylesheet" href="css/videos-new.css"/>
@@ -20,62 +20,63 @@
     <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </head>
 
-<body>
-    <div class="header">
-        <div style="font-size:1.5em">OpenAgents, Inc.</div>
-        <p style="margin: 10px 0 0 0">Intelligent software to empower humans.</p>
-    </div>
+<body class="bg-black text-white font-mono min-h-screen">
+    <div class="max-w-[60rem] mx-auto px-5">
+        <div class="py-5 border-b border-zinc-800 mb-5">
+            <div class="text-2xl">OpenAgents, Inc.</div>
+            <p class="mt-2">Intelligent software to empower humans.</p>
+        </div>
+        
+        <div class="flex mb-8">
+            <div class="flex-1 overflow-y-auto p-5 border-r border-zinc-800">
+                <div id="changelog" 
+                     hx-get="/data/changelog.json" 
+                     hx-trigger="load" 
+                     hx-ext="client-side-templates"
+                     mustache-template="changelog-template">
+                </div>
+            </div>
 
-    <div class="container">
-        <div class="column">
-            <div id="changelog" 
-                 hx-get="/data/changelog.json" 
-                 hx-trigger="load" 
-                 hx-ext="client-side-templates"
-                 mustache-template="changelog-template">
+            <div class="flex-1 overflow-y-auto p-5">
+                <div id="videos" 
+                     hx-get="/data/videos.json" 
+                     hx-trigger="load" 
+                     hx-ext="client-side-templates"
+                     mustache-template="videos-template">
+                </div>
             </div>
         </div>
 
-        <div class="column">
-            <div id="videos" 
-                 hx-get="/data/videos.json" 
-                 hx-trigger="load" 
-                 hx-ext="client-side-templates"
-                 mustache-template="videos-template">
-            </div>
-        </div>
-
-        <div class="column">
+        <div class="border-t border-zinc-800 pt-8">
             <div id="chat-container"
                  hx-get="templates/chat.mustache"
                  hx-trigger="load"
                  mustache-template="chat">
             </div>
         </div>
-    </div>
 
     <template id="changelog-template">
-        <div class="changelog">
-            <div class="intro-card">
-                <p style="text-align: center; margin-top: 0; font-size: 1.2em;"><strong>Meet Onyx, your new personal AI agent.</strong></p>
+        <div class="space-y-8">
+            <div class="bg-zinc-900 rounded-lg p-6 space-y-4">
+                <p class="text-xl font-bold text-center">Meet Onyx, your new personal AI agent.</p>
 
-                <p style="text-align: center; font-size: 1.2em; margin: 15px 0;">Beta v0.1.0</p>
+                <p class="text-xl text-center">Beta v0.1.0</p>
 
-                <div class="download-links">
-                    <p>Android: <a href="https://github.com/OpenAgentsInc/onyx/releases/download/v0.1.0/Onyx_v0.1.0.apk" download>Download APK</a> | <a href="https://github.com/OpenAgentsInc/onyx/releases/tag/v0.1.0" target="_blank">Release notes</a></p>
+                <div class="space-y-2">
+                    <p>Android: <a href="https://github.com/OpenAgentsInc/onyx/releases/download/v0.1.0/Onyx_v0.1.0.apk" class="text-white hover:text-zinc-300 underline" download>Download APK</a> | <a href="https://github.com/OpenAgentsInc/onyx/releases/tag/v0.1.0" class="text-white hover:text-zinc-300 underline" target="_blank">Release notes</a></p>
 
-                    <p>iOS: <a href="https://testflight.apple.com/join/9WfqDTgH" target="_blank">Download via TestFlight</a></p>
+                    <p>iOS: <a href="https://testflight.apple.com/join/9WfqDTgH" class="text-white hover:text-zinc-300 underline" target="_blank">Download via TestFlight</a></p>
                 </div>
 
-                <p style="font-size: 0.8em; opacity: 0.7;">The most recent iOS build may still be awaiting approval. In the meantime the TestFlight link will give you access to the previous build. TestFlight will automatically download the latest version once it passes review.</p>
+                <p class="text-sm text-zinc-300">The most recent iOS build may still be awaiting approval. In the meantime the TestFlight link will give you access to the previous build. TestFlight will automatically download the latest version once it passes review.</p>
 
-                <p>Videos: <a href="https://x.com/OpenAgentsInc/status/1870030269916340610" target="_blank">Onyx Beta Launch</a> | <a href="https://x.com/OpenAgentsInc/status/1872388364013379949" target="_blank">Code by Voice</a></p>
+                <p>Videos: <a href="https://x.com/OpenAgentsInc/status/1870030269916340610" class="text-white hover:text-zinc-300 underline" target="_blank">Onyx Beta Launch</a> | <a href="https://x.com/OpenAgentsInc/status/1872388364013379949" class="text-white hover:text-zinc-300 underline" target="_blank">Code by Voice</a></p>
             </div>
 
             {{#changes}}
-            <div class="changelog-entry">
-                <div class="changelog-date">{{version}} - {{date}}</div>
-                <ul>
+            <div class="border border-zinc-800 rounded-lg p-4">
+                <div class="text-lg font-bold mb-2">{{version}} - {{date}}</div>
+                <ul class="list-disc list-inside space-y-1">
                     {{#changes}}
                     <li>{{.}}</li>
                     {{/changes}}
