Updated index.html to improve meta descriptions for better SEO and user understanding.

--- a/static/index.html
+++ b/static/index.html
@@ -56,7 +56,7 @@
         </header>
 
         <template id="button-template">
-            <a class="btn-nav black bg-white hover:bg-gray-100 text-black font-mono text-xs py-2 px-4 w-full inline-flex items-center" href="{{href}}"><i class="nav-active-icon mr-2"></i>{{text}}</a>
+            {{{template}}}
         </template>
     </div>
 </body>
